app/static/styles.css
/* CRI Colors
rgb(177, 23, 49)
rgb(42, 43, 44) */

.brand
{
    font-family: "CRI";
    color: rgb(177, 23, 49);
    font-size: 36px;
    text-shadow: .5px .5px 1px rgb(235, 234, 234);
}

.brand:hover
{
    color: rgb(138, 18, 38);
}


.form-control
{
    border-radius: 30px;
}

.form-control-label
{
    margin-left: 1.5%;
}

.form-group .short
{
    width: 80%;
}

.navbar-custom
{
    background-color: rgb(42, 43, 44);
    height: 60px;
}

.nav-link
{
    font-size: 19px !important;
    color: rgba(233, 233, 233, 0.849) !important;
}

.nav-link:hover
{
    color: rgba(223, 223, 223, 0.6) !important;
}

/* Not doing anything right now but could be used later */
.navbar-toggler-icon
{
    color: blue;
    /* background-image: url("https://img.icons8.com/nolan/64/ruby-programming-language.png") !important; */

}

.form-control-md
{
    border-radius: 10px;
    border-color: grey;
    width: 100px;
    height: 125%;
    text-align: center;
}


.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
    outline: none;
    border: none;
    box-shadow: none;
}

th
{
    background-color: rgb(177, 23, 49) !important;
    color: white !important;
}

html, body
{
    height: 100%;
    font-family: Ubuntu;
    background-color: rgb(235, 234, 234);
}

#main-content
{
    min-height: 100%;
}


.account-img
{
    width: 150px;
    height: 150px;
}

@media screen and (max-width: 770px){
    .account-img
    {
        width: 100px;
        height: 100px;
    }
}

.slider 
{
    -webkit-appearance: none;
    width: 73%;
    height: 15px;
    display: block;
    margin : 0 auto;
    border-radius: 5px;  
    background: #bebebe;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}
  
.slider::-webkit-slider-thumb 
{
-webkit-appearance: none;
appearance: none;
width: 25px;
height: 25px;
border-radius: 50%; 
background: rgb(177, 23, 49);
cursor: grab;
}

.slider::-moz-range-thumb 
{
width: 25px;
height: 25px;
border-radius: 50%;
background: rgb(177, 23, 49);
cursor: grab;
}


.form-check-input-xl
{
    width: 2.5vh;
    height: 2.5vh;
    margin-left: 1vw;
}
@media screen and (min-width: 900px)
{
.nav-item:hover
{
    background-color: rgba(177, 23, 49, 1);
    border-radius: 2px;
}

.nav-item:hover .nav-link
{
    color:white !important;
    padding-left: 15px;
    padding-right: 15px;
    transform: scale(1.2);
    transition: transform .15s;
}
}

.box
{
border-style: solid;
border-width: 2px;
border-color: rgba(150, 150, 150, 0.7);
user-select: none;
list-style-type: none;
text-align: center;
width:50%;
border-radius: 10px;
padding: 10px;
margin-bottom: 2%;
background-color: white;
}

#item-container
{
border-style:solid; 
padding: 20px;
border-width: 3px;
border-color: rgba(177, 23, 49, .5);
border-radius: 20px;
}

.responsive-border
{
    display: inline-block;
    text-align: center;
    width:auto;
    margin:auto;
}

.rounded-circle-small
{
    border-radius: 50%;
    width:5vh;
    height: 5vh;
}

.form-control-md
{
    border-style: solid;
    border-color:rgba(160, 160, 160, .7);
    border-width: 1.5px;
}


.footer-container
{
    padding: 30px;
    background:#343a40;
}

.footer
{
    color:#f8f9fa;
    height:140px;
    position: relative;
}


@font-face 
{
font-family: "CRI";
src: url("Egiziano_CG.otf") format("opentype");
}

